--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # Created by .ignore support plugin (hsz.mobi)
 
 # IDE Files
-.idea
+.idea/
+Configuration.iml
 
 # Sys Files
 .DS_Store
 
 # Privacy
 ssh/
+bash/bash_inc/extra
+script/common/oss
